--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+
 @import 'tailwindcss';
+
+body {
+  font-family: 'Poor Story', sans-serif;
+}
